[gd_scene load_steps=55 format=3 uid="uid://dfq2iqhuccltx"]

[ext_resource type="Script" uid="uid://4vxvmd16aeo1" path="res://scenes/game.gd" id="1_lbhrr"]
[ext_resource type="Texture2D" uid="uid://doghmovcgeltw" path="res://graphics/map.png" id="1_uwrxv"]
[ext_resource type="PackedScene" uid="uid://dghd7rii024ea" path="res://scenes/player.tscn" id="2_yqjtg"]
[ext_resource type="PackedScene" uid="uid://b6h30qaxpwyfr" path="res://scenes/tree.tscn" id="3_lnu2h"]
[ext_resource type="PackedScene" uid="uid://dxj8ro3phpkyc" path="res://scenes/box.tscn" id="5_iywne"]
[ext_resource type="Texture2D" uid="uid://cxutqp0hti8vw" path="res://graphics/objects/bench.png" id="6_p57ef"]
[ext_resource type="Texture2D" uid="uid://c5iy3tuxd0vaw" path="res://graphics/objects/barrier.png" id="7_kvuet"]
[ext_resource type="Texture2D" uid="uid://beho7qo80tneo" path="res://graphics/objects/bin.png" id="8_trtic"]
[ext_resource type="Texture2D" uid="uid://y78osdw0bolc" path="res://graphics/objects/box1.png" id="9_ir15t"]
[ext_resource type="Texture2D" uid="uid://cuqeolw7yvunc" path="res://graphics/objects/box3.png" id="10_ca42v"]
[ext_resource type="Texture2D" uid="uid://cv8cli0ov53f1" path="res://graphics/objects/box2.png" id="11_rysoc"]
[ext_resource type="Texture2D" uid="uid://b8fq8sgkmu4dx" path="res://graphics/objects/green car.png" id="12_ssvqc"]
[ext_resource type="Texture2D" uid="uid://b778fphjcav0" path="res://graphics/objects/light.png" id="13_264po"]
[ext_resource type="Texture2D" uid="uid://b3jchn0artiyt" path="res://graphics/objects/line.png" id="14_ca42v"]
[ext_resource type="Texture2D" uid="uid://cgvtilagem3np" path="res://graphics/objects/red car.png" id="15_rysoc"]
[ext_resource type="Texture2D" uid="uid://58kopy31xbf8" path="res://graphics/objects/taxi.png" id="16_ssvqc"]
[ext_resource type="Texture2D" uid="uid://73gfa8tjrcik" path="res://graphics/objects/house3.png" id="17_264po"]
[ext_resource type="Texture2D" uid="uid://dxciltwc3sgll" path="res://graphics/objects/house2.png" id="18_1kice"]
[ext_resource type="Texture2D" uid="uid://d1h0ksxlju0ou" path="res://graphics/objects/house1.png" id="19_5newe"]
[ext_resource type="Texture2D" uid="uid://d0dya2slufckd" path="res://graphics/cars/green.png" id="20_1kice"]
[ext_resource type="Texture2D" uid="uid://oqgtp468wc6x" path="res://graphics/objects/sign.png" id="21_5newe"]
[ext_resource type="Texture2D" uid="uid://cfe22lwgaf1k2" path="res://graphics/objects/traffic.png" id="22_37s47"]
[ext_resource type="Texture2D" uid="uid://y3ndpd5bhsi3" path="res://graphics/objects/tree2.png" id="23_pl11u"]
[ext_resource type="Texture2D" uid="uid://d0so81ys3820n" path="res://graphics/objects/tree1.png" id="24_bhx41"]
[ext_resource type="Texture2D" uid="uid://boj6kq1t4mduj" path="res://graphics/objects/tree potted.png" id="25_qnb83"]
[ext_resource type="FontFile" uid="uid://hqpa84d2dqvp" path="res://fonts/Better VCR 9.0.1.ttf" id="26_bhx41"]
[ext_resource type="AudioStream" uid="uid://d05385du5fc0j" path="res://audio/S31-City on Speed.ogg" id="27_qnb83"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lnu2h"]
size = Vector2(20, 718)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lbhrr"]
size = Vector2(390, 20)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_iywne"]
size = Vector2(392, 167)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_u5sy4"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_1kice"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kvuet"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_trtic"]
size = Vector2(16, 6)

[sub_resource type="CircleShape2D" id="CircleShape2D_ir15t"]
radius = 4.1231055

[sub_resource type="RectangleShape2D" id="RectangleShape2D_264po"]
size = Vector2(53, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_5newe"]
size = Vector2(12, 14)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ca42v"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_37s47"]
size = Vector2(94, 57)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bt5mj"]
size = Vector2(45, 44)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1j6l"]
size = Vector2(76, 78)

[sub_resource type="CircleShape2D" id="CircleShape2D_264po"]
radius = 4.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pl11u"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bhx41"]
size = Vector2(16, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qnb83"]
size = Vector2(14, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sww3w"]
size = Vector2(20, 12)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_suyxu"]
size = Vector2(12, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_sgl2t"]
size = Vector2(48, 52)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qouja"]
size = Vector2(8, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wljb1"]
size = Vector2(12, 10)

[sub_resource type="CircleShape2D" id="CircleShape2D_37s47"]
radius = 3.1622777

[sub_resource type="CircleShape2D" id="CircleShape2D_bt5mj"]
radius = 3.0

[sub_resource type="CircleShape2D" id="CircleShape2D_e1j6l"]
radius = 3.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_v2yb1"]
size = Vector2(8, 20)

[node name="Game" type="Node2D"]
script = ExtResource("1_lbhrr")

[node name="BG" type="Sprite2D" parent="."]
position = Vector2(0, 1)
texture = ExtResource("1_uwrxv")
metadata/_edit_lock_ = true

[node name="Borders" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="StaticBody2D" type="StaticBody2D" parent="Borders"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D"]
position = Vector2(-202, 0)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="StaticBody2D2" type="StaticBody2D" parent="Borders"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D2"]
position = Vector2(202, 0)
shape = SubResource("RectangleShape2D_lnu2h")

[node name="StaticBody2D3" type="StaticBody2D" parent="Borders"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D3"]
position = Vector2(0, 331)
shape = SubResource("RectangleShape2D_lbhrr")

[node name="StaticBody2D4" type="StaticBody2D" parent="Borders"]
collision_layer = 8
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/StaticBody2D4"]
position = Vector2(0, -329)
shape = SubResource("RectangleShape2D_lbhrr")

[node name="FinishArea2D" type="Area2D" parent="Borders"]
position = Vector2(23, 44)
collision_layer = 0
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Borders/FinishArea2D"]
position = Vector2(-22, -284.5)
shape = SubResource("RectangleShape2D_iywne")

[node name="Timer" type="Node" parent="."]

[node name="CarTimer" type="Timer" parent="Timer"]
wait_time = 0.25
autostart = true

[node name="ScoreTimer" type="Timer" parent="Timer"]
autostart = true

[node name="Objects" type="Node2D" parent="."]
y_sort_enabled = true

[node name="Player" parent="Objects" instance=ExtResource("2_yqjtg")]
position = Vector2(-106, 230)

[node name="Tree" parent="Objects" instance=ExtResource("3_lnu2h")]
position = Vector2(-153, -231)

[node name="Tree5" parent="Objects" instance=ExtResource("3_lnu2h")]
position = Vector2(-36, -289)

[node name="Tree6" parent="Objects" instance=ExtResource("3_lnu2h")]
position = Vector2(-161, 214)

[node name="Tree2" parent="Objects" instance=ExtResource("3_lnu2h")]
position = Vector2(145, -291)

[node name="Tree3" parent="Objects" instance=ExtResource("3_lnu2h")]
position = Vector2(64, 239)

[node name="Tree4" parent="Objects" instance=ExtResource("3_lnu2h")]
position = Vector2(9, 293)

[node name="Box" parent="Objects" instance=ExtResource("5_iywne")]
position = Vector2(70, 61)

[node name="Bench" type="StaticBody2D" parent="Objects"]
position = Vector2(166, 190)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Objects/Bench"]
texture = ExtResource("6_p57ef")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Bench"]
shape = SubResource("RectangleShape2D_u5sy4")

[node name="Bench2" type="StaticBody2D" parent="Objects"]
position = Vector2(117, 66)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Objects/Bench2"]
texture = ExtResource("6_p57ef")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Bench2"]
shape = SubResource("RectangleShape2D_u5sy4")

[node name="Bench3" type="StaticBody2D" parent="Objects"]
position = Vector2(110, 190)
metadata/_edit_group_ = true

[node name="Sprite2D" type="Sprite2D" parent="Objects/Bench3"]
texture = ExtResource("6_p57ef")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Bench3"]
shape = SubResource("RectangleShape2D_u5sy4")

[node name="Stuff" type="Node2D" parent="Objects"]
y_sort_enabled = true

[node name="Barrier" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-15, 24)
texture = ExtResource("7_kvuet")

[node name="Bin" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-33, 25)
texture = ExtResource("8_trtic")

[node name="Box1" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-76, 31)
texture = ExtResource("9_ir15t")

[node name="Box3" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-66, 35)
texture = ExtResource("10_ca42v")

[node name="Box2" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-55, 30)
texture = ExtResource("11_rysoc")

[node name="GreenCar" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-78, 62)
texture = ExtResource("12_ssvqc")

[node name="Light" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-9, 61)
texture = ExtResource("13_264po")

[node name="StaticBody2D" type="StaticBody2D" parent="Objects/Stuff"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-78, 62)
shape = SubResource("RectangleShape2D_1kice")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Objects/Stuff/StaticBody2D"]
polygon = PackedVector2Array(-82, 26, -70, 26, -70, 29, -70, 29, -70, 30, -61, 30, -61, 25, -49, 25, -49, 35, -58, 35, -58, 39, -74, 39, -74, 36, -82, 36)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-33, 26)
shape = SubResource("RectangleShape2D_kvuet")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-15, 24)
shape = SubResource("RectangleShape2D_trtic")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-9, 71)
shape = SubResource("CircleShape2D_ir15t")

[node name="CollisionShape2D5" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-104.5, 263)
shape = SubResource("RectangleShape2D_264po")

[node name="CollisionShape2D6" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-112, 64)
shape = SubResource("RectangleShape2D_5newe")

[node name="CollisionShape2D7" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(144, 65)
shape = SubResource("RectangleShape2D_ca42v")

[node name="CollisionShape2D8" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(141, 289.5)
shape = SubResource("RectangleShape2D_37s47")

[node name="CollisionShape2D9" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-162.5, 55)
shape = SubResource("RectangleShape2D_bt5mj")

[node name="CollisionShape2D10" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(46, -264)
shape = SubResource("RectangleShape2D_e1j6l")

[node name="CollisionShape2D11" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-27, -73)
shape = SubResource("CircleShape2D_264po")

[node name="CollisionShape2D12" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-134, -73)
shape = SubResource("CircleShape2D_264po")

[node name="CollisionShape2D13" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(120, -74)
shape = SubResource("CircleShape2D_264po")

[node name="CollisionShape2D14" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(83, 272)
shape = SubResource("RectangleShape2D_pl11u")

[node name="CollisionShape2D15" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(63, 24)
shape = SubResource("RectangleShape2D_bhx41")

[node name="CollisionShape2D16" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-64, -209)
shape = SubResource("RectangleShape2D_qnb83")

[node name="CollisionShape2D17" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(13, -212)
shape = SubResource("RectangleShape2D_sww3w")

[node name="CollisionShape2D18" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(100, -211)
shape = SubResource("RectangleShape2D_suyxu")

[node name="CollisionShape2D19" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-18, -251)
shape = SubResource("RectangleShape2D_sgl2t")

[node name="CollisionShape2D20" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-70, 202)
shape = SubResource("RectangleShape2D_qouja")

[node name="CollisionShape2D21" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(141, 228)
shape = SubResource("RectangleShape2D_wljb1")

[node name="CollisionShape2D22" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(54, 73)
shape = SubResource("CircleShape2D_37s47")

[node name="CollisionShape2D23" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-137, 205)
shape = SubResource("CircleShape2D_bt5mj")

[node name="CollisionShape2D25" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-82, -137)
shape = SubResource("CircleShape2D_e1j6l")

[node name="CollisionShape2D26" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(50, -137)
shape = SubResource("CircleShape2D_e1j6l")

[node name="CollisionShape2D27" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(187, -137)
shape = SubResource("CircleShape2D_e1j6l")

[node name="CollisionShape2D24" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-159, -298)
shape = SubResource("RectangleShape2D_v2yb1")

[node name="CollisionShape2D28" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-104, -289)
shape = SubResource("RectangleShape2D_v2yb1")

[node name="CollisionShape2D29" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(-87, -246)
shape = SubResource("RectangleShape2D_v2yb1")

[node name="CollisionShape2D30" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(135, -233)
shape = SubResource("RectangleShape2D_v2yb1")

[node name="CollisionShape2D31" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(167, -258)
shape = SubResource("RectangleShape2D_v2yb1")

[node name="CollisionShape2D32" type="CollisionShape2D" parent="Objects/Stuff/StaticBody2D"]
position = Vector2(171, -216)
shape = SubResource("RectangleShape2D_v2yb1")

[node name="Line" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-104, 259)
texture = ExtResource("14_ca42v")

[node name="Taxi" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-112, 65)
texture = ExtResource("16_ssvqc")

[node name="RedCar" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(144, 65)
texture = ExtResource("15_rysoc")

[node name="House3" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-162, 46)
texture = ExtResource("17_264po")

[node name="House2" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(45, -281)
texture = ExtResource("18_1kice")

[node name="House1" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(141, 282)
texture = ExtResource("19_5newe")

[node name="Light2" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-27, -83)
texture = ExtResource("13_264po")

[node name="Light3" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-134, -83)
texture = ExtResource("13_264po")

[node name="Light4" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(120, -84)
texture = ExtResource("13_264po")

[node name="Bench" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(83, 271)
texture = ExtResource("6_p57ef")

[node name="Barrier2" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(63, 24)
texture = ExtResource("7_kvuet")

[node name="RedCar2" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-64, -208)
texture = ExtResource("15_rysoc")

[node name="Green" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(13, -211)
texture = ExtResource("20_1kice")

[node name="Taxi2" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(100, -211)
texture = ExtResource("16_ssvqc")

[node name="Bin2" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(75, -219)
texture = ExtResource("8_trtic")

[node name="House4" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-19, -257)
texture = ExtResource("17_264po")

[node name="Bin3" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-70, 201)
texture = ExtResource("8_trtic")

[node name="Box4" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(141, 228)
texture = ExtResource("11_rysoc")

[node name="Sign" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-137, 192)
texture = ExtResource("21_5newe")

[node name="Traffic" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(50, 62)
texture = ExtResource("22_37s47")

[node name="Light6" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-82, -148)
texture = ExtResource("13_264po")

[node name="Light7" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(50, -148)
texture = ExtResource("13_264po")

[node name="Light8" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(187, -148)
texture = ExtResource("13_264po")

[node name="Tree1" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-104, -292)
texture = ExtResource("24_bhx41")

[node name="Tree2" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-159, -302)
texture = ExtResource("23_pl11u")

[node name="TreePotted" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(135, -237)
texture = ExtResource("25_qnb83")

[node name="Tree3" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(167, -261)
texture = ExtResource("24_bhx41")

[node name="Tree7" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(171, -218)
texture = ExtResource("23_pl11u")

[node name="Tree5" type="Sprite2D" parent="Objects/Stuff"]
position = Vector2(-87, -250)
texture = ExtResource("24_bhx41")

[node name="CarStartPosition" type="Node2D" parent="."]
metadata/_edit_lock_ = true

[node name="Marker2D" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-201, 7)

[node name="Marker2D2" type="Marker2D" parent="CarStartPosition"]
position = Vector2(198, -24)

[node name="Marker2D3" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-201, -48)

[node name="Marker2D4" type="Marker2D" parent="CarStartPosition"]
position = Vector2(197, -95)

[node name="Marker2D5" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-202, -115)

[node name="Marker2D6" type="Marker2D" parent="CarStartPosition"]
position = Vector2(202, 93)

[node name="Marker2D7" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-203, 115)

[node name="Marker2D8" type="Marker2D" parent="CarStartPosition"]
position = Vector2(203, 140)

[node name="Marker2D9" type="Marker2D" parent="CarStartPosition"]
position = Vector2(-202, 163)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -39.0
offset_top = 20.0
offset_right = 39.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("26_bhx41")
theme_override_font_sizes/font_size = 30
text = "Time elapased: 0"
horizontal_alignment = 1

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("27_qnb83")
volume_db = -10.495
autoplay = true
parameters/looping = false

[connection signal="body_entered" from="Borders/FinishArea2D" to="." method="_on_finish_area_2d_body_entered"]
[connection signal="timeout" from="Timer/CarTimer" to="." method="_on_car_timer_timeout"]
[connection signal="timeout" from="Timer/ScoreTimer" to="." method="_on_score_timer_timeout"]
